file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward   ${TRUST_ROOT}/src/Kernel/Champs   ${TRUST_ROOT}/src/Kernel/Framework   ${TRUST_ROOT}/src/Kernel/Geometrie   ${TRUST_ROOT}/src/Kernel/Statistiques_temps   ${TRUST_ROOT}/src/Kernel/Utilitaires   ${TRUST_ROOT}/src/Kernel/Math   ${TRUST_ROOT}/src/MAIN   ${TRUST_MEDCOUPLING_ROOT}/include   ${TRUST_ICOCOAPI}/include   ${MPI_INCLUDE})
add_library(obj_icoco OBJECT  ${srcs} )
set(listlibs ${listlibs} icoco PARENT_SCOPE    )
add_custom_target(check_sources_icoco   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity icoco" )
add_DEPENDENCIES(obj_icoco check_sources_icoco)
if(COMPIL_DYN)
  add_library(icoco SHARED   $<TARGET_OBJECTS:obj_icoco> )
  install(TARGETS icoco  DESTINATION lib)
endif(COMPIL_DYN)
