file(GLOB srcs [A-Z|a-z]*.cpp [A-Z|a-z]*.c [A-Z|a-z]*.f)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}  ${TRUST_ROOT}/include/backward  ${MPI_INCLUDE}  ${TRUST_ICOCOAPI}/include  ${TRUST_MEDCOUPLING_ROOT}/include  ${TRUST_ROOT}/src/Kernel/Framework  ${TRUST_ROOT}/src/Kernel/Geometrie  ${TRUST_ROOT}/src/Kernel/Math  ${TRUST_ROOT}/src/Kernel/Utilitaires  ${TRUST_ROOT}/src/MAIN )
add_library(obj_icoco OBJECT  ${srcs} )
set(listlibs ${listlibs} icoco PARENT_SCOPE    )
add_custom_target(check_sources_icoco   COMMAND check_sources.sh ${CMAKE_CURRENT_SOURCE_DIR} ) #COMMENT  "checking code validity icoco" )
add_DEPENDENCIES(obj_icoco check_sources_icoco)
if(COMPIL_DYN)
  add_library(icoco SHARED   $<TARGET_OBJECTS:obj_icoco> )
  install(TARGETS icoco  DESTINATION lib)
endif(COMPIL_DYN)
